--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         .cta-button {
             padding: 10px 20px;
-            background-color: #0073e6;
+            background-color: #1d3440;
             color: #fff;
             font-size: 1em;
             text-decoration: none;
@@ -70,7 +70,7 @@
         <p>Il nostro sito è in arrivo! Stiamo lavorando per offrirvi la migliore esperienza possibile.</p>
 
         <!-- Call to action -->
-        <a href="mailto:info@33web.com" class="cta-button">Contattaci</a>
+        <a href="mailto:info@33web.it" class="cta-button">Contattaci</a>
     </div>
 
 </body>
