--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>33Web - Coming Soon</title>
+    <title>33web - Coming Soon</title>
     <style>
         /* Reset margini */
         * {
@@ -64,9 +64,9 @@
 
     <div class="container">
         <!-- Logo - Sostituisci il percorso con quello corretto del tuo logo -->
-        <img src="logo.png" alt="33Web Logo" class="logo">
+        <img src="logo.png" alt="33web Logo" class="logo">
 
-        <h1>Benvenuti in 33Web</h1>
+        <h1>Benvenuti in 33web</h1>
         <p>Il nostro sito è in arrivo! Stiamo lavorando per offrirvi la migliore esperienza possibile.</p>
 
         <!-- Call to action -->
