--- a/index.html
+++ b/index.html
@@ -24,8 +24,12 @@
         }
 
         .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center; /* Centra il contenuto orizzontalmente */
+            justify-content: center; /* Centra il contenuto verticalmente */
+            flex-grow: 1; /* Espandi per occupare tutto lo spazio */
             text-align: center;
-            padding: 20px;
         }
 
         .logo {
