--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         /* Stile pagina */
         body {
-            font-family: Arial, sans-serif;
+            font-family: system-ui;
             display: flex;
             flex-direction: column;
             min-height: 100vh;
