--- a/index.html
+++ b/index.html
@@ -134,13 +134,15 @@
 
         /* Main content */
         .container {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-align: center;
-            padding: 20px;
-        }
+			flex: 1;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			text-align: center;
+			padding: 20px;
+			max-width: 950px; /* Limita la larghezza del testo */
+			margin: auto; /* Centra il contenitore */
+		}
 
         h1 {
             font-size: 2em;
@@ -302,7 +304,8 @@
     <!-- Main content -->
     <div class="container">
         <h1>Siamo esperti di comunicazione online</h1>
-        <p>33web è uno studio di consulenti di marketing online, specializzati in comunicazione sui motori di ricerca, ecommerce, social media e digital analytics.</p>
+        <p>33web è uno studio di consulenti di marketing online di esperienza più che decennale. Siamo specializzati in comunicazione e advertising sui motori di ricerca, strategie ed integrazione di sistemi ecommerce, strategie di social media e progettazione sistemi di digital analytics.</p>
+		<p>Scopri cosa sappiamo fare e chiedici di più!</p>
         <a href="mailto:info@33web.it" class="cta-button">Contattaci</a>
     </div>
 
