--- a/index.html
+++ b/index.html
@@ -252,6 +252,12 @@
             padding: 20px;
             font-size: 0.9em;
         }
+		
+		footer p {
+			margin-bottom: 5px; /* Riduce lo spazio tra i paragrafi */
+			line-height: 1; /* Aggiusta l'altezza della linea per migliorare la leggibilità */
+		}
+
     </style>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
@@ -337,7 +343,8 @@
     <footer>
         <p>33web di Elisa Poli</p>
         <p>Via Mosna di Vigolo 14/A, 38123 Trento</p>
-        <p>CF: PLOLSE82E50L378C | PI: IT02773780222</p>
+        <p>CF: PLOLSE82E50L378C</p>
+		<p>PI: IT02773780222</p>
     </footer>
 </body>
 </html>
