--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
             width: 40px;
             height: 40px;
             transition: background-color 0.3s;
+			padding-bottom: 5px;
         }
 
         .service-box a:hover {
