--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
     <!-- Main content -->
     <div class="container">
         <h1>Siamo esperti di comunicazione online</h1>
-        <p>33web è uno studio di consulenti di marketing online di esperienza più che decennale. Siamo specializzati in comunicazione e advertising sui motori di ricerca, strategie ed integrazione di sistemi ecommerce, strategie di social media e progettazione sistemi di digital analytics.</p>
+        <p>33web è uno studio di consulenti di marketing digitale di esperienza più che decennale. Siamo specializzati in comunicazione e advertising sui motori di ricerca, strategie ed integrazione di sistemi ecommerce, strategie di social media e progettazione sistemi di digital analytics.</p>
 		<p>Scopri cosa sappiamo fare e chiedici di più!</p>
         <a href="mailto:info@33web.it" class="cta-button">Contattaci</a>
     </div>
