--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="manifest" href="site.webmanifest">
     <link rel="shortcut icon" href="favicon.ico">
     <title>33web | Studio di consulenza marketing online</title>
+	<meta name="description" content="33web è uno studio di consulenti di marketing online di esperienza più che decennale. Scopri cosa sappiamo fare e chiedici di più!">
     <style>
         /* Reset margini */
         * {
