Variazione header image

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         .header-image {
             width: 100%;
             height: 300px;
-            background-image: url('header-image.jpg');
+            background-image: url('header-image-04.jpg');
             background-size: cover;
             background-position: center;
 			margin-top: 60px; /* Aggiunge spazio per compensare l'altezza della navbar */
