--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <link rel="manifest" href="site.webmanifest">
+    <link rel="manifest" href="icons/site.webmanifest">
     <link rel="shortcut icon" href="favicon.ico">
     <title>33web | Studio di consulenza marketing online</title>
 	<meta name="description" content="33web è uno studio di consulenti di marketing online di esperienza più che decennale. Scopri cosa sappiamo fare e chiedici di più!">
@@ -134,7 +134,7 @@
         .header-image {
             width: 100%;
             height: 300px;
-            background-image: url('header-image-04.jpg');
+            background-image: url('images/header-image-04.jpg');
             background-size: cover;
             background-position: center;
 			margin-top: 60px; /* Aggiunge spazio per compensare l'altezza della navbar */
@@ -308,7 +308,7 @@
     <!-- Navbar -->
     <nav class="navbar">
     <div class="logo">
-        <a href="index.html"><img src="logo.png" alt="33web Logo"></a>
+        <a href="index.html"><img src="images/logo.png" alt="33web Logo"></a>
     </div>
     <div class="menu">
         <ul class="services-menu">
@@ -354,7 +354,7 @@
 	
     <div class="service-box">
         <div class="service-header">
-            <img src="loupe_256.png" alt="Search Marketing Icon" class="service-icon">
+            <img src="images/loupe_256.png" alt="Search Marketing Icon" class="service-icon">
             <h3>Search Marketing</h3>
         </div>
         <p>Strategie di posizionamento e visibilità nei motori di ricerca.</p>
@@ -363,7 +363,7 @@
 
     <div class="service-box">
         <div class="service-header">
-            <img src="promotion_256.png" alt="Ecommerce Icon" class="service-icon">
+            <img src="images/promotion_256.png" alt="Ecommerce Icon" class="service-icon">
             <h3>Ecommerce</h3>
         </div>
         <p>Soluzioni per il tuo negozio online e strategie di vendita.</p>
@@ -372,7 +372,7 @@
 
     <div class="service-box">
         <div class="service-header">
-            <img src="chat_256.png" alt="Social Media Icon" class="service-icon">
+            <img src="images/chat_256.png" alt="Social Media Icon" class="service-icon">
             <h3>Social Media</h3>
         </div>
         <p>Piani editoriali e gestione delle piattaforme social.</p>
@@ -381,7 +381,7 @@
 
     <div class="service-box">
         <div class="service-header">
-            <img src="analytics_256.png" alt="Digital Analytics Icon" class="service-icon">
+            <img src="images/analytics_256.png" alt="Digital Analytics Icon" class="service-icon">
             <h3>Digital Analytics</h3>
         </div>
         <p>Analisi dei dati per ottimizzare le tue strategie digitali.</p>
