--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
+    <link rel="apple-touch-icon" href="icons/apple-touch-icon.png">
     <link rel="manifest" href="icons/site.webmanifest">
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="icons/favicon.ico">
     <title>33web | Studio di consulenza marketing online</title>
 	<meta name="description" content="33web è uno studio di consulenti di marketing online di esperienza più che decennale. Scopri cosa sappiamo fare e chiedici di più!">
     <style>
