--- a/index.html
+++ b/index.html
@@ -274,6 +274,65 @@
 			height: auto; /* Mantiene le proporzioni */
 		}
 
+        /* Team boxes */
+		
+		.team {
+			text-align: center;
+			padding: 40px 20px;
+			background-color: #f7f7f7; /* Colore di sfondo per separare visivamente */
+		}
+	
+		.team h2 {
+			font-size: 2em;
+			margin-bottom: 20px;
+			color: #333;
+		}
+
+		.team-profiles {
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: center;
+			gap: 20px;
+		}
+
+		.team-member {
+			background-color: #fff;
+			border: 1px solid #ccc;
+			border-radius: 10px;
+			padding: 20px;
+			width: 22%;
+			box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+			text-align: center;
+		}
+
+		.team-avatar {
+			width: 100px;
+			height: 100px;
+			border-radius: 50%;
+			margin-bottom: 15px;
+			box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+		}
+
+		.team-member h3 {
+			font-size: 1.5em;
+			margin-bottom: 10px;
+			color: #1d3440;
+		}
+		
+		.team-member p {
+			font-size: 1em;
+			color: #555;
+			margin-bottom: 15px;
+		}
+		
+		.team-cta-text {
+			font-size: 1.2em;
+			margin-top: 30px;
+			color: #333;
+		}
+		
+		/* Responsive */
+
         @media (max-width: 768px) {
 			.navbar ul {
 				display: none;
@@ -285,6 +344,14 @@
 	
 			.service-box {
 				width: 100%;
+			}
+			
+			.team-profiles {
+				flex-direction: column; /* Dispone i membri uno sotto l'altro */
+			}
+
+			.team-member {
+				width: 100%; /* Ogni membro del team occupa l'intera larghezza */
 			}
 
 		}
@@ -418,6 +485,29 @@
 	
 	</div>
 
+	<!-- Team Section -->
+	<div class="team">
+		<h2>Il nostro team</h2>
+		<div class="team-profiles">
+			<div class="team-member">
+				<img src="images/martino-mosna.jpg" alt="Martino Mosna" class="team-avatar">
+				<h3>Martino Mosna</h3>
+				<p>Consulente di Search Marketing e Digital Analytics</p>
+			</div>
+			<div class="team-member">
+				<img src="images/elisa-poli.jpg" alt="Team Member 2" class="team-avatar">
+				<h3>Elisa Poli</h3>
+				<p>Consulente ecommerce e strategie di vendita</p>
+			</div>
+			<div class="team-member">
+				<img src="images/roxana-todea.jpg" alt="Team Member 3" class="team-avatar">
+				<h3>Roxana Todea</h3>
+				<p>Consulente social media, fotografa e videomaker</p>
+			</div>
+		</div>
+		<p class="team-cta-text">Vuoi sapere di più sulle nostre competenze e la nostra storia professionale?</p>
+		<a href="#about" class="cta-button">Scopri chi siamo</a>
+	</div>
 
     <!-- Footer -->
     <footer>
