--- a/index.html
+++ b/index.html
@@ -10,389 +10,415 @@
     <link rel="shortcut icon" href="icons/favicon.ico">
     <title>33web | Studio di consulenza marketing online</title>
 	<meta name="description" content="33web è uno studio di consulenti di marketing online di esperienza più che decennale. Scopri cosa sappiamo fare e chiedici di più!">
-    <style>
-        /* Reset margini */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+	<style>
+    /* Reset margini e box-sizing */
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
 
-        /* Stile pagina */
-        body {
-            font-family: system-ui;
+    /* Stile pagina */
+    body {
+        font-family: system-ui;
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+        background-color: #d1d9d6;
+        color: #333;
+    }
+
+    /* Navbar */
+    .navbar {
+        background-color: #1d3440;
+        color: #fff;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px 20px;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        z-index: 1000;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    .navbar .logo img {
+        width: 50px;
+    }
+
+    /* Menu generico */
+    .menu {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+    }
+	
+	.nav-links ul {
+		list-style: none; /* Rimuove i marcatori */
+		margin: 0; /* Rimuove margini predefiniti */
+		padding: 0; /* Rimuove padding predefinito */
+	}
+
+    /* Menu link (nav-links) di default nascosti (mobile-first) */
+    .nav-links {
+        display: none;
+        list-style: none;
+    }
+
+    .nav-links li a {
+        color: #fff;
+        text-decoration: none;
+        font-size: 1.2em;
+    }
+
+    .nav-links li a:hover {
+        text-decoration: underline;
+    }
+
+    /* Mostra il menu se ha la classe active (usato per mobile) */
+    .nav-links.active {
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        width: 100%;
+        background-color: #1d3440;
+        padding: 20px;
+        gap: 20px;
+    }
+
+    /* Sezioni del menu per desktop */
+    .nav-primary,
+    .nav-secondary {
+        display: flex;
+        gap: 20px;
+        margin: 0;
+        padding: 0;
+    }
+
+    /* Hamburger menu (mobile) */
+    .hamburger {
+        display: none;
+        flex-direction: column;
+        gap: 5px;
+        cursor: pointer;
+    }
+
+    .hamburger div {
+        width: 25px;
+        height: 3px;
+        background-color: #fff;
+    }
+
+    /* Desktop: menu visibile e disposto orizzontalmente */
+    @media (min-width: 769px) {
+        .nav-links {
             display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-            background-color: #d1d9d6;
-            color: #333;
-        }
-
-        .navbar {
-			background-color: #1d3440;
-			color: #fff;
-			display: flex;
-			justify-content: space-between;
-			align-items: center;
-			padding: 10px 20px;
-			position: fixed; /* Mantiene la navbar fissa */
-			top: 0; /* Posiziona la navbar in alto */
-			left: 0;
-			width: 100%; /* Estende la navbar a tutta la larghezza */
-			z-index: 1000; /* Assicura che la navbar sia sopra gli altri elementi */
-			box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Aggiunge un'ombra per separarla dal contenuto */
-		}
-
-        .navbar .logo img {
-            width: 50px;
-        }
-
-        .navbar ul {
-            list-style: none;
-            display: flex;
-            gap: 30px;
-        }
-
-        .navbar ul li a {
-            color: #fff;
-            text-decoration: none;
-            font-size: 1.2em;
-        }
-
-        .navbar ul li a:hover {
-            text-decoration: underline;
-        }
-		
-		/* Desktop menu */
-	    .menu {
-			display: flex;
-			justify-content: space-between;
-			flex: 1;
-			margin-left: 20px;
-		}
-
-		.services-menu {
-			display: flex;
-			list-style: none;
-			gap: 20px;
-		}
-
-		.utility-menu {
-			display: flex;
-			list-style: none;
-			gap: 20px;
-			margin-left: auto; /* Spinge il menu di servizio a destra */
-		}
-
-		.services-menu li a,
-		.utility-menu li a {
-			color: #fff;
-			text-decoration: none;
-			font-size: 1em;
-			padding: 5px 10px;
-		}
-
-		.services-menu li a:hover,
-		.utility-menu li a:hover {
-			text-decoration: underline;
-		}
-
-        /* Hamburger menu */
-        .hamburger {
-            display: none;
-            flex-direction: column;
-            gap: 5px;
-            cursor: pointer;
-        }
-
-        .hamburger div {
-            width: 25px;
-            height: 3px;
-            background-color: #fff;
-        }
-
-        .mobile-menu {
-            display: none;
-            flex-direction: column;
-            gap: 15px;
-            background-color: #1d3440;
-            padding: 20px;
-            position: absolute;
-            top: 60px;
-            left: 0;
-            width: 100%;
-            z-index: 1000;
-        }
-
-        .mobile-menu a {
-            color: #fff;
-            text-decoration: none;
-            font-size: 1.2em;
-        }
-
-        /* Header image styling */
-        .header-image {
-            width: 100%;
-            height: 300px;
-            background-image: url('images/header-image-04.jpg');
-            background-size: cover;
-            background-position: center;
-			margin-top: 60px; /* Aggiunge spazio per compensare l'altezza della navbar */
-			position: relative; /* Assicurati che sia relativa per il posizionamento assoluto del logo */
-        }
-		
-		.header-logo {
-			position: absolute;
-			top: 40%; /* Porta il logo più in alto */
-			left: 50%;
-			transform: translate(-50%, -30%); /* Centra il logo orizzontalmente e lo sposta verticalmente */
-			text-align: center;
-			z-index: 10; /* Assicura che il logo sia visibile sopra l'immagine */
-		}
-
-		.header-logo img {
-			width: 100px; /* Dimensione del logo */
-			height: auto;
-			margin-bottom: 10px;
-		}
-
-		.header-logo .subtitle {
-			font-size: 3em;
-			font-weight: bold;
-			color: #fff;
-			text-shadow: 0 2px 4px rgba(0, 0, 0, 0.6); /* Per maggiore leggibilità su sfondi colorati */
-		}
-
-        /* Main content */
-        .container {
-			flex: 1;
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-			text-align: center;
-			padding: 20px;
-			max-width: 950px; /* Limita la larghezza del testo */
-			margin: auto; /* Centra il contenitore */
-		}
-
-        h1 {
-            font-size: 2em;
-            margin-bottom: 10px;
-        }
-
-        p {
-            font-size: 1.1em;
-            margin-bottom: 20px;
-        }
-
-        .cta-button {
-            padding: 10px 20px;
-            background-color: #1d3440;
-            color: #fff;
-            font-size: 1em;
-            text-decoration: none;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
-
-        .cta-button:hover {
-            background-color: #005bb5;
-        }
-
-        /* Service boxes */
-        .services {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
+            flex-direction: row;
             gap: 20px;
-            padding: 20px;
+            position: static;
+            background-color: transparent;
+            padding: 0;
+			justify-content: space-between;
+			width: 100%;
+			list-style: none;
+			padding: 0;
+			margin: 0;
+			margin-left: 20px; /* Spazio tra logo e menu */
         }
 
-        .service-box {
-            background-color: #fff;
-            border: 1px solid #ccc;
-            border-radius: 8px;
-            padding: 20px;
-            width: 22%;
+        .nav-primary {
+            margin-right: auto;
+        }
+
+        .nav-secondary {
+            margin-left: auto;
+        }
+    }
+
+    /* Mobile: mostra hamburger, nasconde menu di default */
+    @media (max-width: 768px) {
+        .hamburger {
             display: flex;
+        }
+
+        .nav-primary,
+        .nav-secondary {
             flex-direction: column;
-            justify-content: space-between; /* Mantiene il bottone in basso */
-            position: relative;
-            text-align: left;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            transition: transform 0.2s, box-shadow 0.2s;
-            min-height: 200px; /* Altezza minima uniforme */
+            margin: 0;
         }
+    }
 
-        .service-box:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
-        }
-
-        .service-box h3 {
-            font-size: 1.5em;
-            margin-bottom: 10px;
-        }
-
-        .service-box p {
-            font-size: 1.1em;
-            color: #555;
-            margin: 15px 0 40px; /* Spazio aggiuntivo sotto il paragrafo */
-            flex-grow: 1; /* Mantiene il testo sopra il bottone */
-        }
-
-		.service-box a {
-			position: absolute;
-			bottom: 10px; /* Sposta il link verso il basso */
-			right: 15px; /* Mantiene la posizione a destra */
-			background-color: #1d3440;
-			color: #fff;
-			font-size: 1.2em;
-			text-decoration: none;
-			border-radius: 50%;
-			width: 40px;
-			height: 40px;
-			display: flex;
-			align-items: center;
-			justify-content: center;
-			transition: background-color 0.3s;
-		}
-
-		.service-box a:hover {
-			background-color: #005bb5;
-		}
-		
-		.service-header {
-			display: flex;
-			align-items: center; /* Allinea verticalmente l'icona e il testo */
-			gap: 10px; /* Spazio tra l'icona e il titolo */
-			height: 80px; /* Altezza fissa */
-		}	
-
-		.service-icon {
-			width: 60px; /* Dimensione dell'icona */
-			height: auto; /* Mantiene le proporzioni */
-		}
-
-        /* Team boxes */
-		
-		.team {
-			text-align: center;
-			padding: 40px 20px;
-			background-color: #f7f7f7; /* Colore di sfondo per separare visivamente */
-		}
-	
-		.team h2 {
-			font-size: 2em;
-			margin-bottom: 20px;
-			color: #333;
-		}
-
-		.team-profiles {
-			display: flex;
-			flex-wrap: wrap;
-			justify-content: center;
-			gap: 20px;
-		}
-
-		.team-member {
-			background-color: #fff;
-			border: 1px solid #ccc;
-			border-radius: 10px;
-			padding: 20px;
-			width: 22%;
-			box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-			text-align: center;
-		}
-
-		.team-avatar {
-			width: 100px;
-			height: 100px;
-			border-radius: 50%;
-			margin-bottom: 15px;
-			box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-		}
-
-		.team-member h3 {
-			font-size: 1.5em;
-			margin-bottom: 10px;
-			color: #1d3440;
-		}
-		
-		.team-member p {
-			font-size: 1em;
-			color: #555;
-			margin-bottom: 15px;
-		}
-		
-		.team-cta-text {
-			font-size: 1.2em;
-			margin-top: 30px;
-			color: #333;
-		}
-		
-		/* Responsive */
-
-        @media (max-width: 768px) {
-			.navbar ul {
-				display: none;
-			}
-
-			.hamburger {
-				display: flex;
-			}
-	
-			.service-box {
-				width: 100%;
-			}
-			
-			.team-profiles {
-				flex-direction: column; /* Dispone i membri uno sotto l'altro */
-			}
-
-			.team-member {
-				width: 100%; /* Ogni membro del team occupa l'intera larghezza */
-			}
-
-		}
-
-		/* Regole aggiuntive per breakpoint tra 1300px e 768px */
-		@media (min-width: 769px) and (max-width: 1300px) {
-			.service-box {
-				width: 45%;
-			}
-			.navbar ul li a {
-				font-size: 0.9em;
-			}
-			.navbar ul {
-				gap: 10px;
-			}
-		}
-
-        footer {
-            background-color: #1d3440;
-            color: #d1d9d6;
-            text-align: center;
-            padding: 20px;
+    /* Regole aggiuntive per schermi medi */
+    @media (min-width: 769px) and (max-width: 1300px) {
+        .nav-links li a {
             font-size: 0.9em;
         }
-		
-		footer p {
-			margin-bottom: 5px; /* Riduce lo spazio tra i paragrafi */
-			line-height: 1; /* Aggiusta l'altezza della linea per migliorare la leggibilità */
-		}
+    }
 
-    </style>
+    /* Header image styling */
+    .header-image {
+        width: 100%;
+        height: 300px;
+        background-image: url('images/header-image-04.jpg');
+        background-size: cover;
+        background-position: center;
+        margin-top: 60px; /* Spazio per la navbar fissa */
+        position: relative;
+    }
+
+    .header-logo {
+        position: absolute;
+        top: 40%;
+        left: 50%;
+        transform: translate(-50%, -30%);
+        text-align: center;
+        z-index: 10;
+    }
+
+    .header-logo img {
+        width: 100px;
+        height: auto;
+        margin-bottom: 10px;
+    }
+
+    .header-logo .subtitle {
+        font-size: 3em;
+        font-weight: bold;
+        color: #fff;
+        text-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
+    }
+
+    /* Contenitore principale */
+    .container {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        padding: 20px;
+        max-width: 950px;
+        margin: auto;
+    }
+
+    h1 {
+        font-size: 2em;
+        margin-bottom: 10px;
+    }
+
+    p {
+        font-size: 1.1em;
+        margin-bottom: 20px;
+    }
+
+    .cta-button {
+        padding: 10px 20px;
+        background-color: #1d3440;
+        color: #fff;
+        font-size: 1em;
+        text-decoration: none;
+        border-radius: 5px;
+        transition: background-color 0.3s;
+    }
+
+    .cta-button:hover {
+        background-color: #005bb5;
+    }
+
+    /* Service boxes */
+    .services {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 20px;
+        padding: 20px;
+    }
+
+    .service-box {
+        background-color: #fff;
+        border: 1px solid #ccc;
+        border-radius: 8px;
+        padding: 20px;
+        width: 22%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        position: relative;
+        text-align: left;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        transition: transform 0.2s, box-shadow 0.2s;
+        min-height: 200px;
+    }
+
+    .service-box:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+    }
+
+    .service-box h3 {
+        font-size: 1.5em;
+        margin-bottom: 10px;
+    }
+
+    .service-box p {
+        font-size: 1.1em;
+        color: #555;
+        margin: 15px 0 40px;
+        flex-grow: 1;
+    }
+
+    .service-box a {
+        position: absolute;
+        bottom: 10px;
+        right: 15px;
+        background-color: #1d3440;
+        color: #fff;
+        font-size: 1.2em;
+        text-decoration: none;
+        border-radius: 50%;
+        width: 40px;
+        height: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: background-color 0.3s;
+    }
+
+    .service-box a:hover {
+        background-color: #005bb5;
+    }
+
+    .service-header {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        height: 80px;
+    }
+
+    .service-icon {
+        width: 60px;
+        height: auto;
+    }
+
+    /* Responsive servizi */
+    @media (max-width: 768px) {
+        .service-box {
+            width: 100%;
+        }
+    }
+
+    /* Team boxes */
+    .team {
+        text-align: center;
+        padding: 40px 20px;
+        background-color: #f7f7f7;
+    }
+
+    .team h2 {
+        font-size: 2em;
+        margin-bottom: 20px;
+        color: #333;
+    }
+
+    .team-profiles {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 20px;
+    }
+
+    .team-member {
+        background-color: #fff;
+        border: 1px solid #ccc;
+        border-radius: 10px;
+        padding: 20px;
+        width: 22%;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        text-align: center;
+    }
+
+    .team-avatar {
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        margin-bottom: 15px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    .team-member h3 {
+        font-size: 1.5em;
+        margin-bottom: 10px;
+        color: #1d3440;
+    }
+
+    .team-member p {
+        font-size: 1em;
+        color: #555;
+        margin-bottom: 15px;
+    }
+
+    .team-cta-text {
+        font-size: 1.2em;
+        margin-top: 30px;
+        color: #333;
+    }
+
+    /* Responsive team */
+    @media (max-width: 768px) {
+        .team-profiles {
+            flex-direction: column;
+        }
+
+        .team-member {
+            width: 100%;
+        }
+    }
+
+    /* Regole aggiuntive per breakpoint tra 1300px e 768px (già integrate sopra) */
+
+    /* Footer */
+    footer {
+        background-color: #1d3440;
+        color: #d1d9d6;
+        text-align: center;
+        padding: 20px;
+        font-size: 0.9em;
+    }
+
+    footer p {
+        margin-bottom: 5px;
+        line-height: 1;
+    }
+	</style>
+
     <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            const hamburger = document.querySelector('.hamburger');
-            const mobileMenu = document.querySelector('.mobile-menu');
+		document.addEventListener('DOMContentLoaded', function () {
+			const hamburger = document.querySelector('.hamburger');
+			const navLinks = document.querySelector('.nav-links');
+		
+			if (!hamburger) {
+				console.error("Elemento .hamburger non trovato nel DOM.");
+				return;
+			}
+		
+			if (!navLinks) {
+				console.error("Elemento .nav-links non trovato nel DOM.");
+				return;
+			}
+		
+			console.log("Entrambi gli elementi trovati.");
+		
+			hamburger.addEventListener('click', function () {
+				navLinks.classList.toggle('active');
+				console.log("Classe 'active' togglata:", navLinks.classList.contains('active'));
+			});
+		});
 
-            hamburger.addEventListener('click', function () {
-                mobileMenu.style.display = mobileMenu.style.display === 'flex' ? 'none' : 'flex';
-            });
-        });
-    </script>
+	</script>
+
 </head>
 <body>
     <!-- Navbar -->
@@ -401,32 +427,26 @@
         <a href="index.html"><img src="images/logo.png" alt="33web Logo"></a>
     </div>
     <div class="menu">
-        <ul class="services-menu">
-            <li><a href="#search-marketing">Search Marketing</a></li>
-            <li><a href="#ecommerce">Ecommerce</a></li>
-            <li><a href="#social-media">Social Media</a></li>
-            <li><a href="#digital-analytics">Digital Analytics</a></li>
-        </ul>
-        <ul class="utility-menu">
-            <li><a href="#about">Chi siamo</a></li>
-        </ul>
-    </div>
+		<div class="nav-links">
+			<ul class="nav-primary">
+				<li><a href="#search-marketing">Search Marketing</a></li>
+				<li><a href="#ecommerce">Ecommerce</a></li>
+				<li><a href="#social-media">Social Media</a></li>
+				<li><a href="#digital-analytics">Digital Analytics</a></li>
+			</ul>
+			<ul class="nav-secondary">
+				<li><a href="#about">Chi siamo</a></li>
+			</ul>
+		</div>
+	</div>
+
     <div class="hamburger">
         <div></div>
         <div></div>
         <div></div>
     </div>
-    </nav>
+	</nav>
 
-
-    <!-- Mobile menu -->
-    <div class="mobile-menu">
-        <a href="#about">Chi siamo</a>
-        <a href="#services">Search Marketing</a>
-		<a href="#services">Ecommerce</a>
-		<a href="#services">Social Media</a>
-		<a href="#services">Digital Analytics</a>
-    </div>
 
     <!-- Header image -->
     <div class="header-image">
