--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
 
 	<!-- Team Section -->
 	<div class="team">
-		<h2>Il nostro team</h2>
+		<h2>Esperti al tuo fianco</h2>
 		<div class="team-profiles">
 			<div class="team-member">
 				<img src="images/martino-mosna.jpg" alt="Martino Mosna" class="team-avatar">
