--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
     <!-- Navbar -->
     <nav class="navbar">
     <div class="logo">
-        <a href="index.html"><img src="images/logo.png" alt="33web Logo"></a>
+        <a href="./"><img src="images/logo.png" alt="33web Logo"></a>
     </div>
     <div class="menu">
 		<div class="nav-links">
