--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <link rel="shortcut icon" href="icons/favicon.ico">
     <title>33web | Studio di consulenza marketing online</title>
 	<meta name="description" content="33web è uno studio di consulenti di marketing online di esperienza più che decennale. Scopri cosa sappiamo fare e chiedici di più!">
+	<!-- Open Graph meta tags -->
+	<meta property="og:title" content="33web | Studio di consulenza marketing online">
+	<meta property="og:description" content="33web è uno studio di consulenti di marketing digitale con esperienza decennale. Specializzati in SEO, SEM, ecommerce, social media e digital analytics.">
+	<meta property="og:image" content="https://www.33web.it/images/header-image-04.jpg"> <!-- Sostituisci con il percorso corretto -->
+	<meta property="og:url" content="https://www.33web.it">
+	<meta property="og:type" content="website">
+	<meta property="og:site_name" content="33web">
+	<meta property="og:locale" content="it_IT">
+
 	<style>
     /* Reset margini e box-sizing */
     * {
