--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 	<!-- Open Graph meta tags -->
 	<meta property="og:title" content="33web | Studio di consulenza marketing online">
 	<meta property="og:description" content="33web è uno studio di consulenti di marketing digitale con esperienza decennale. Specializzati in SEO, SEM, ecommerce, social media e digital analytics.">
-	<meta property="og:image" content="https://www.33web.it/images/header-image-04.jpg"> <!-- Sostituisci con il percorso corretto -->
-	<meta property="og:url" content="https://www.33web.it">
+	<meta property="og:image" content="https://www.33web.it/images/og-image-1200x630.jpg">
+	<meta property="og:image:width" content="1200">
+	<meta property="og:image:height" content="630">
 	<meta property="og:type" content="website">
 	<meta property="og:site_name" content="33web">
 	<meta property="og:locale" content="it_IT">
