--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
 	<meta name="description" content="33web è uno studio di consulenti di marketing online di esperienza più che decennale. Scopri cosa sappiamo fare e chiedici di più!">
 	<!-- Open Graph meta tags -->
 	<meta property="og:title" content="33web | Studio di consulenza marketing online">
-	<meta property="og:description" content="33web è uno studio di consulenti di marketing digitale con esperienza decennale. Specializzati in SEO, SEM, ecommerce, social media e digital analytics.">
+	<meta property="og:description" content="33web è uno studio di consulenti di marketing online di esperienza più che decennale. Siamo specializzati in Search Marketing, Ecommerce e Social Media.">
 	<meta property="og:image" content="https://www.33web.it/images/og-image-1200x630.jpg">
 	<meta property="og:image:width" content="1200">
 	<meta property="og:image:height" content="630">
 	<meta property="og:type" content="website">
 	<meta property="og:site_name" content="33web">
 	<meta property="og:locale" content="it_IT">
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="33web | Studio di consulenza marketing online">
+	<meta name="twitter:description" content="33web è uno studio di consulenti di marketing online di esperienza più che decennale. Siamo specializzati in Search Marketing, Ecommerce e Social Media.">
+	<meta name="twitter:image" content="https://www.33web.it/images/og-image-1200x630.jpg">
 
 	<style>
     /* Reset margini e box-sizing */
