--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
             <img src="images/chat_256.png" alt="Social Media Icon" class="service-icon">
             <h3>Social Media</h3>
         </div>
-        <p>Piani editoriali e gestione delle piattaforme social.</p>
+        <p>Piani editoriali e consulenza gestione piattaforme social.</p>
         <a href="#">></a>
     </div>
 
@@ -604,7 +604,7 @@
 			<div class="team-member">
 				<img src="images/roxana-todea.jpg" alt="Team Member 3" class="team-avatar">
 				<h3>Roxana Todea</h3>
-				<p>Consulente social media, fotografa e videomaker</p>
+				<p>Consulente digital strategy e social media</p>
 			</div>
 		</div>
 		<p class="team-cta-text">Vuoi sapere di più sulle nostre competenze e la nostra storia professionale?</p>
